Implement Stripe payment integration with checkout flow and success/cancel handling

--- a/back/.env.example
+++ b/back/.env.example
@@ -28,6 +28,12 @@ DB_DATABASE=back
 DB_USERNAME=root
 DB_PASSWORD=
 
+STRIPE_SECRET_KEY=sk_xxxxxxxxxxxxxxxxxx
+STRIPE_PUBLISHABLE_KEY=pk_xxxxxxxxxxxxxxxxxx
+STRIPE_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxx
+STRIPE_SUCCESS_URL=http://localhost:5173/success?session_id={CHECKOUT_SESSION_ID}
+STRIPE_CANCEL_URL=http://localhost:5173/cancel?session_id={CHECKOUT_SESSION_ID}
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
